# ThreatDeflect

./: .gitignore  .~lock.Analise_Repositorios.xlsx#  CONTRIBUTING.md  Cargo.toml  IPS.txt  LICENSE  README.en.md  README.md  api_client.py  config.md  main_gui.py  mkdocs.yml  pyproject.toml  report_generator.py  repository_analyzer.py  requirements.dev.txt  requirements.txt  setup.py  threatdeflect-cli.spec  threatdeflect-gui.spec  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  detection_rule.yml  feature_request.yml
.github/workflows/: build-release.yml  docs.yml  validate-author.yml
docs/: 404.html  ai-integration.en.md  ai-integration.md  api-configuration.en.md  api-configuration.pt.md  changelog.en.md  changelog.md  changelog.pt.md  cli-reference.en.md  cli-reference.pt.md  contributing.en.md  contributing.md  gui-guide.en.md  gui-guide.md  index.en.md  index.html  index.md  index.pt.md  installation.en.md  installation.md  installation.pt.md  rules-engine.en.md  rules-engine.md  rules-engine.pt.md  rust-engine.en.md  rust-engine.md  sitemap.xml
docs/ai-integration/: index.html
docs/api-configuration/: index.html
docs/changelog/: index.html
docs/cli-reference/: index.html
docs/contributing/: index.html
docs/en/: index.html
docs/gui-guide/: index.html
docs/installation/: index.html
docs/landing/: index.html
docs/rules-engine/: index.html
rust_core/: Cargo.toml
rust_core/src/: lib.rs
tests/: benchmark_ai.py  test_engine.py  test_main_gui.py  test_report_generator.py  test_repository_analyzer.py  test_rust_core.py  test_scan_improvements.py  test_security.py  test_utils.py
threatdeflect-core/: Cargo.toml  README.md
threatdeflect-core/src/: analyzer.rs  confidence.rs  context.rs  error.rs  lib.rs  types.rs  walker.rs
threatdeflect_rs/: __init__.py
(+29 files in other folders)
