[package]
name = "threatdeflect_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "threatdeflect_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
regex = "1.11.1"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"